Adding swagger api doc for /exam-templates routes and subroutes, and organizing api doc
